feat: Add Patterns and MT5 Logs tabs to configuration page; remove back link from Patterns and MT5 Logs pages

--- a/docker/services/frontend/html/config-data.html
+++ b/docker/services/frontend/html/config-data.html
@@ -563,6 +563,8 @@
             <button class="tab-btn" data-tab="strategies">Trading-Strategien</button>
             <button class="tab-btn" data-tab="explorer">Daten-Explorer</button>
             <button class="tab-btn" data-tab="external">External Sources</button>
+            <button class="tab-btn" data-tab="patterns">Patterns</button>
+            <button class="tab-btn" data-tab="mt5logs">MT5 Logs</button>
             <button class="tab-btn" data-tab="export">Export / Import</button>
         </div>
 
@@ -989,6 +991,16 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Patterns Tab -->
+        <div id="patterns-tab" class="tab-content">
+            <iframe src="/config-patterns.html" style="width: 100%; height: calc(100vh - 180px); border: none; border-radius: 8px;"></iframe>
+        </div>
+
+        <!-- MT5 Logs Tab -->
+        <div id="mt5logs-tab" class="tab-content">
+            <iframe src="/mt5-logs.html" style="width: 100%; height: calc(100vh - 180px); border: none; border-radius: 8px;"></iframe>
         </div>
 
         <!-- Export/Import Tab -->
