feat: Rename 'Patterns' tab to 'Candlestick Patterns' for clarity

--- a/docker/services/frontend/html/config-data.html
+++ b/docker/services/frontend/html/config-data.html
@@ -563,7 +563,7 @@
             <button class="tab-btn" data-tab="strategies">Trading-Strategien</button>
             <button class="tab-btn" data-tab="explorer">Daten-Explorer</button>
             <button class="tab-btn" data-tab="external">External Sources</button>
-            <button class="tab-btn" data-tab="patterns">Patterns</button>
+            <button class="tab-btn" data-tab="patterns">Candlestick Patterns</button>
             <button class="tab-btn" data-tab="mt5logs">MT5 Logs</button>
             <button class="tab-btn" data-tab="export">Export / Import</button>
         </div>
